--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
   "homepage": "https://github.com/RIanDeLaCruz/conference-api",
   "dependencies": {
     "body-parser": "^1.12.3",
+    "cookie-parser": "^1.3.4",
+    "debug": "^2.1.1",
+    "ejs": "^2.3.1",
     "express": "^4.12.3",
     "method-override": "^2.3.2",
     "mongoose": "^4.0.2",
     "morgan": "^1.5.2",
-    "nodemon": "^1.3.7"
+    "nodemon": "^1.3.7",
+    "serve-favicon": "^2.2.0"
   }
 }
