--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/RIanDeLaCruz/conference-api",
   "dependencies": {
     "body-parser": "^1.12.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
     "debug": "^2.1.1",
     "ejs": "^2.3.1",
