--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   },
   "homepage": "https://github.com/RIanDeLaCruz/conference-api",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.4",
     "debug": "^2.1.1",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "express-session": "^1.11.1",
     "method-override": "^2.3.2",
     "mongoose": "^4.0.2",
     "morgan": "^1.5.2",
