--- a/package.json
+++ b/package.json
@@ -1,42 +1,34 @@
 {
-  "name": "conference-api",
-  "version": "0.0.1",
-  "description": "Sample Conference Web Application",
+  "name": "node-authentication",
   "main": "server.js",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "test": "test"
+    "start": "server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/RIanDeLaCruz/conference-api.git"
-  },
-  "keywords": [
-    "api"
-  ],
-  "author": "Ian De La Cruz",
-  "license": "MIT",
-  "engines": {
-    "node": "0.10.38",
-    "npm": "2.7.5"
-  },
-  "bugs": {
-    "url": "https://github.com/RIanDeLaCruz/conference-api/issues"
-  },
-  "homepage": "https://github.com/RIanDeLaCruz/conference-api",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.12.3",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^0.8.1",
-    "cookie-parser": "^1.3.4",
-    "debug": "^2.1.1",
-    "ejs": "^2.3.1",
-    "express": "^4.12.3",
-    "express-session": "^1.11.1",
-    "method-override": "^2.3.2",
-    "mongoose": "^4.0.2",
-    "morgan": "^1.5.2",
-    "nodemon": "^1.3.7",
-    "serve-favicon": "^2.2.0"
+    "express": "~4.0.0",
+    "static-favicon": "~1.0.0",
+    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.0",
+    "body-parser": "~1.0.0",
+    "debug": "~0.7.4",
+    "ejs": "~0.8.5",
+    "method-override": "~1.0.0",
+    "mongoose": "~3.8.1",
+
+    "connect-flash": "~0.1.1",
+    "connect-mongo": "^0.4.1",
+    "express-session": "^1.0.4",
+    "bcrypt-nodejs": "latest",
+    "passport": "~0.1.17",
+    "passport-facebook": "~1.0.2",
+    "passport-google-oauth": "~0.1.5",
+    "passport-local": "~0.1.6",
+    "passport-twitter": "~1.0.2"
+
+  },
+  "devDependencies": {
+    "nodemon": "^1.2.0"
   }
 }
